[gd_scene load_steps=12 format=3 uid="uid://bghjs74vebhcm"]

[ext_resource type="Script" path="res://scenes/level_selector/level_selector.gd" id="1_qcvhi"]
[ext_resource type="Texture2D" uid="uid://bhjjbaq75b4nt" path="res://art/backgrounds/waterPattern.webp" id="2_afl8q"]
[ext_resource type="PackedScene" uid="uid://dpqmqkkjxn61l" path="res://scenes/level_selector/level.tscn" id="2_aog86"]
[ext_resource type="Texture2D" uid="uid://dd2ia5vm4bk2h" path="res://art/backgrounds/Pattern.jpg" id="3_2rgxm"]
[ext_resource type="PackedScene" uid="uid://c7r8gs68656vi" path="res://scenes/pause_menu/pause_menu.tscn" id="4_eo1go"]
[ext_resource type="Texture2D" uid="uid://bd0jskfcuvdwo" path="res://art/backgrounds/cat2.png" id="4_v7ib8"]
[ext_resource type="FontFile" uid="uid://ddm3m57t31rfs" path="res://art/fonts/JMH Typewriter.otf" id="5_rrqda"]
[ext_resource type="Texture2D" uid="uid://c8i5rynpq2dlf" path="res://art/EnemySprites/tile014.png" id="6_dv34s"]
[ext_resource type="PackedScene" uid="uid://2x1gxnne0f7t" path="res://scenes/level_selector/data.tscn" id="6_j78q0"]

[sub_resource type="Shader" id="Shader_xyoir"]
code = "shader_type canvas_item;

uniform float speed = 0.05;
uniform float distortionAmount = 0.05;

void vertex() {
    UV.x -= TIME * speed;
}

void fragment() {
    vec2 distorted_uv = vec2(
        UV.x + sin(UV.y * 2.0 + TIME) * distortionAmount,
        UV.y + cos(UV.x * 2.0 + TIME) * distortionAmount
    );

    vec4 texColor = texture(TEXTURE, distorted_uv);
    float luminance = dot(texColor.rgb, vec3(0.5, 0.5, 0.01));
    vec3 finalColor = mix(vec3(0.0), vec3(0.8, 0.0, 0.2), luminance);

    COLOR = vec4(finalColor, texColor.a);
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5w54k"]
shader = SubResource("Shader_xyoir")
shader_parameter/speed = 0.1
shader_parameter/distortionAmount = 0.03

[node name="LevelSelector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qcvhi")

[node name="BackgroundLayer" type="CanvasLayer" parent="."]

[node name="AnimatedBackground" type="Control" parent="BackgroundLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MovingPattern1" type="TextureRect" parent="BackgroundLayer/AnimatedBackground"]
texture_repeat = 2
material = SubResource("ShaderMaterial_5w54k")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_afl8q")
expand_mode = 2

[node name="MovingPattern2" type="TextureRect" parent="BackgroundLayer/AnimatedBackground"]
texture_repeat = 2
material = SubResource("ShaderMaterial_5w54k")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 85.0
offset_right = -168.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_2rgxm")
expand_mode = 1

[node name="BackgroundColor" type="ColorRect" parent="BackgroundLayer/AnimatedBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -171.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="BackgroundColor2" type="ColorRect" parent="BackgroundLayer/AnimatedBackground"]
modulate = Color(0, 0, 0, 0.501961)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 88.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MovingPattern3" type="TextureRect" parent="BackgroundLayer/AnimatedBackground"]
texture_repeat = 3
material = SubResource("ShaderMaterial_5w54k")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 200.0
offset_top = 8.0
offset_right = -5.0
offset_bottom = -124.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_2rgxm")
expand_mode = 1
stretch_mode = 1
flip_h = true
flip_v = true

[node name="BackgroundColor3" type="ColorRect" parent="BackgroundLayer/AnimatedBackground/MovingPattern3"]
modulate = Color(0, 0, 0, 0.670588)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.305882)

[node name="Label" type="Label" parent="BackgroundLayer/AnimatedBackground"]
layout_mode = 0
offset_left = 205.0
offset_top = 8.0
offset_right = 248.0
offset_bottom = 21.0
theme_override_fonts/font = ExtResource("5_rrqda")
theme_override_font_sizes/font_size = 10
text = "World 1"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="BossTexture" type="TextureRect" parent="BackgroundLayer/AnimatedBackground"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -64.0
offset_right = 32.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_v7ib8")
expand_mode = 3

[node name="UserStatsLayer" type="CanvasLayer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="UserStatsLayer"]
position = Vector2(24, 28)
scale = Vector2(1.125, 1.1875)
texture = ExtResource("6_dv34s")
flip_h = true

[node name="dataUsername" parent="UserStatsLayer" instance=ExtResource("6_j78q0")]
offset_left = 7.0
offset_top = 56.0
offset_right = 7.0
offset_bottom = 56.0

[node name="dataTimeLeft" parent="UserStatsLayer" instance=ExtResource("6_j78q0")]
offset_left = 7.0
offset_top = 72.0001
offset_right = 7.0
offset_bottom = 72.0001

[node name="dataKills" parent="UserStatsLayer" instance=ExtResource("6_j78q0")]
offset_left = 7.0
offset_top = 88.0
offset_right = 7.0
offset_bottom = 88.0

[node name="dataDeaths" parent="UserStatsLayer" instance=ExtResource("6_j78q0")]
offset_left = 7.0
offset_top = 104.0
offset_right = 7.0
offset_bottom = 104.0

[node name="LevelsLayer" type="CanvasLayer" parent="."]

[node name="Level1" parent="LevelsLayer" instance=ExtResource("2_aog86")]
offset_left = -19.0
offset_top = -27.0
offset_right = -19.0
offset_bottom = -27.0

[node name="Level2" parent="LevelsLayer" instance=ExtResource("2_aog86")]
offset_left = -19.0
offset_top = 32.0
offset_right = -19.0
offset_bottom = 32.0

[node name="Level3" parent="LevelsLayer" instance=ExtResource("2_aog86")]
offset_left = 24.0
offset_top = 32.0
offset_right = 24.0
offset_bottom = 32.0

[node name="Level4" parent="LevelsLayer" instance=ExtResource("2_aog86")]
offset_left = 56.0
offset_top = 8.0
offset_right = 56.0
offset_bottom = 8.0

[node name="Level5" parent="LevelsLayer" instance=ExtResource("2_aog86")]
offset_left = 88.0
offset_top = -16.0
offset_right = 88.0
offset_bottom = -16.0

[node name="PauseLayer" type="CanvasLayer" parent="."]

[node name="PauseMenu" parent="PauseLayer" instance=ExtResource("4_eo1go")]
visible = false
